FIx: Mobile/Tablet Whitespace fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,6 @@
 
 }
 
-body {
-  min-height: 100vh;
-}
 
 .row{
   padding: 0px;
@@ -33,11 +30,13 @@ body {
 #gameBoard{
   position: relative;
   background-color:var(--BGDark);
+  min-height: 80vh;
   height: auto;
   width:100%;
-  /* order:-1; */
+
   border: var(--Cyan) solid 5px;
-  overflow: hidden;
+
+
 }
 
 #screen_scanlines, #screen_bezel {
@@ -49,7 +48,7 @@ body {
 }
 
 #gameMenu{
-  bottom: 0;
+ 
   background-color:var(--BGDark);
   min-height: 130px;
   border-bottom: var(--Cyan) solid 5px;
